--- a/src/components/page1/page1.scss
+++ b/src/components/page1/page1.scss
@@ -72,6 +72,7 @@
     }
 
     .sponsors{
+        animation: .5s showleft  ease-in-out forwards ;
         margin-top: 1em;
         background-image: url('../assets/bg2.png');
         background-position: center;
